--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "devDependencies": {
       "should"          : ">=0.4.2",
       "mocha"           : ">=0.9.0",
-      "netblackhole"    : ">=0.0.2",
-      "visionmedia-jscoverage" : ">=1.0.0"
+      "jscover": "*"
     },
     "main"  : "./index.js",
     "scripts": {
